config-client-dev.properties
因为测试需要，所以添加了一个键值对

--- a/myconfigpath/config-client-dev.properties
+++ b/myconfigpath/config-client-dev.properties
@@ -1,5 +1,6 @@
 myww=myww version 2
 democonfigclient.message=hello spring io
+from=projectcalculatorservice
 
 # routes to serviceId
 # routes to url
